[tool.poetry]
name = "python-web"
version = "0.1.0"
description = ""
authors = ["IlyaAbramovv <abramov.0383@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
